corregido algunos errores de texto

--- a/HTML/desigualdad.html
+++ b/HTML/desigualdad.html
@@ -21,31 +21,31 @@
             <div class="impacto-box">
                 <h3>En las Personas</h3>
                 <ul>
-                    [cite_start]<li>Genera falta de oportunidades, exclusión de la educación, la vivienda y la salud[cite: 5].</li>
-                    [cite_start]<li>Reduce la movilidad social al limitar las oportunidades profesionales de los grupos más desfavorecidos[cite: 5].</li>
-                    [cite_start]<li>Puede resultar en delincuencia, enfermedades y degradación ambiental[cite: 5].</li>
+                    <li>Genera falta de oportunidades, exclusión de la educación, la vivienda y la salud[cite: 5].</li>
+                    <li>Reduce la movilidad social al limitar las oportunidades profesionales de los grupos más desfavorecidos[cite: 5].</li>
+                    <li>Puede resultar en delincuencia, enfermedades y degradación ambiental[cite: 5].</li>
                 </ul>
             </div>
 
             <div class="impacto-box">
                 <h3>En la Actividad Económica</h3>
                 <ul>
-                    [cite_start]<li>Dificulta el crecimiento económico y la estabilidad a nivel macroeconómico[cite: 5].</li>
-                    [cite_start]<li>Puede limitar el crecimiento potencial de la economía al reducir las inversiones en capital humano por parte de las personas de rentas más bajas[cite: 5].</li>
+                    <li>Dificulta el crecimiento económico y la estabilidad a nivel macroeconómico[cite: 5].</li>
+                    <li>Puede limitar el crecimiento potencial de la economía al reducir las inversiones en capital humano por parte de las personas de rentas más bajas[cite: 5].</li>
                 </ul>
             </div>
         </section>
 
         <section class="info-section medidas-section">
             <h2>Medidas Tomadas y Sugeridas (ODS 10)</h2>
-            [cite_start]<p>Para reducir la desigualdad y lograr el Objetivo de Desarrollo Sostenible (ODS) 10, es necesario[cite: 7]:</p>
+            <p>Para reducir la desigualdad y lograr el Objetivo de Desarrollo Sostenible (ODS) 10, es necesario[cite: 7]:</p>
             <ul>
-                [cite_start]<li>Distribuir equitativamente los recursos[cite: 8].</li>
-                [cite_start]<li>Invertir en la enseñanza y desarrollo de capacidades[cite: 9].</li>
-                [cite_start]<li>Implementar políticas de protección social y garantizar la justicia fiscal[cite: 10].</li>
-                [cite_start]<li>Luchar contra la discriminación (racismo, xenofobia, prejuicios) y apoyar a los grupos marginados (como migrantes y refugiados)[cite: 11, 13].</li>
-                [cite_start]<li>Fortalecer la institucionalidad social e incorporar la noción de multiculturalidad e interculturalidad en las políticas públicas[cite: 14, 15].</li>
-                [cite_start]<li>Las empresas pueden contribuir: cumpliendo las leyes tributarias, promoviendo la diversidad, equidad e inclusión (DEI), y facilitando funciones en distintos idiomas y formatos accesibles[cite: 16].</li>
+                <li>Distribuir equitativamente los recursos[cite: 8].</li>
+                <li>Invertir en la enseñanza y desarrollo de capacidades[cite: 9].</li>
+                <li>Implementar políticas de protección social y garantizar la justicia fiscal[cite: 10].</li>
+                <li>Luchar contra la discriminación (racismo, xenofobia, prejuicios) y apoyar a los grupos marginados (como migrantes y refugiados)[cite: 11, 13].</li>
+                <li>Fortalecer la institucionalidad social e incorporar la noción de multiculturalidad e interculturalidad en las políticas públicas[cite: 14, 15].</li>
+                <li>Las empresas pueden contribuir: cumpliendo las leyes tributarias, promoviendo la diversidad, equidad e inclusión (DEI), y facilitando funciones en distintos idiomas y formatos accesibles[cite: 16].</li>
             </ul>
         </section>
     </main>
