--- a/HTML/educacion_sanidad.html
+++ b/HTML/educacion_sanidad.html
@@ -13,7 +13,7 @@
     </header>
 
     <main class="content-main">
-        [cite_start]<p class="definicion">La educación transforma vidas y es un **derecho humano** para todos a lo largo de la vida[cite: 160]. [cite_start]La UNESCO lidera la Agenda Mundial de Educación 2030 a través del ODS 4, buscando construir la paz, erradicar la pobreza e impulsar el desarrollo sostenible[cite: 161].</p>
+        <p class="definicion">La educación transforma vidas y es un **derecho humano** para todos a lo largo de la vida[cite: 160]. [cite_start]La UNESCO lidera la Agenda Mundial de Educación 2030 a través del ODS 4, buscando construir la paz, erradicar la pobreza e impulsar el desarrollo sostenible[cite: 161].</p>
 
         <section class="info-section">
             <h2>Acceso a la Educación (ODS 4)</h2>
@@ -21,19 +21,19 @@
             <div class="impacto-box">
                 <h3>Cifras Clave</h3>
                 <ul>
-                    [cite_start]<li>El **70%** de los países destina menos del 4% de su PIB a la educación[cite: 169].</li>
-                    [cite_start]<li>**739 millones** de adultos carecen de conocimientos básicos de lectura y escritura[cite: 170].</li>
-                    [cite_start]<li>**272 millones** de niños y jóvenes están sin escolarizar en todo el mundo[cite: 171].</li>
-                    [cite_start]<li>Se necesitan contratar **44 millones de docentes** para lograr la educación primaria y secundaria universal en 2030[cite: 172].</li>
+                    <li>El **70%** de los países destina menos del 4% de su PIB a la educación[cite: 169].</li>
+                    <li>**739 millones** de adultos carecen de conocimientos básicos de lectura y escritura[cite: 170].</li>
+                    <li>**272 millones** de niños y jóvenes están sin escolarizar en todo el mundo[cite: 171].</li>
+                    <li>Se necesitan contratar **44 millones de docentes** para lograr la educación primaria y secundaria universal en 2030[cite: 172].</li>
                 </ul>
             </div>
 
             <div class="impacto-box">
                 <h3>Prioridades y Desafíos</h3>
                 <ul>
-                    [cite_start]<li>La UNESCO fortalece los sistemas educativos globales con la **igualdad de género** como principio subyacente[cite: 164, 165].</li>
-                    [cite_start]<li>Las prioridades actuales incluyen el aprendizaje digital e IA en la educación, la educación verde (para abordar la crisis climática), el apoyo a los docentes y la Educación para la Paz[cite: 166].</li>
-                    [cite_start]<li>Se resalta el papel insustituible del personal docente para guiar a las sociedades frente a desafíos como la IA y la crisis global[cite: 167].</li>
+                    <li>La UNESCO fortalece los sistemas educativos globales con la **igualdad de género** como principio subyacente[cite: 164, 165].</li>
+                    <li>Las prioridades actuales incluyen el aprendizaje digital e IA en la educación, la educación verde (para abordar la crisis climática), el apoyo a los docentes y la Educación para la Paz[cite: 166].</li>
+                    <li>Se resalta el papel insustituible del personal docente para guiar a las sociedades frente a desafíos como la IA y la crisis global[cite: 167].</li>
                 </ul>
             </div>
         </section>
@@ -42,9 +42,9 @@
             <h2>Medidas (Relacionadas con el Acceso)</h2>
             <p>Aunque el PDF se centra en el diagnóstico, la solución implica el cumplimiento del ODS 4, que requiere una fuerte inversión y cooperación.</p>
             <ul>
-                [cite_start]<li>Inversión en infraestructuras y sistemas educativos globales[cite: 165, 172].</li>
-                [cite_start]<li>Desarrollo de capacidades y apoyo al personal docente[cite: 166, 167].</li>
-                [cite_start]<li>Implementación de la Educación para la Paz y la Educación Verde[cite: 166].</li>
+                <li>Inversión en infraestructuras y sistemas educativos globales[cite: 165, 172].</li>
+                <li>Desarrollo de capacidades y apoyo al personal docente[cite: 166, 167].</li>
+                <li>Implementación de la Educación para la Paz y la Educación Verde[cite: 166].</li>
             </ul>
         </section>
     </main>
