--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,7 +15,7 @@
 
     <main class="home-main">
         <div class="image-container">
-            <img src="imagen_principal.jpg" alt="Ilustración dividida de dos realidades sociales contrastantes" class="main-illustration">
+            <img src="imagen global.png" alt="Ilustración dividida de dos realidades sociales contrastantes" class="main-illustration">
             
             <div class="links-overlay">
                 <h2>Explora los Retos</h2>
