--- a/HTML/discriminacion.html
+++ b/HTML/discriminacion.html
@@ -18,23 +18,23 @@
         <section class="info-section">
             <h2>Principales Formas de Discriminación</h2>
             <ul>
-                [cite_start]<li>**Étnica y Racial:** Niega sistemáticamente los derechos humanos por color, raza, etnia o ascendencia (como la casta)[cite: 139].</li>
-                [cite_start]<li>**Contra Personas Extranjeras (Xenofobia):** Se basa en ideas de superioridad y racismo, a menudo fomentadas por políticos, y ha llevado a violencia y políticas abusivas contra migrantes[cite: 141, 142].</li>
-                [cite_start]<li>**Contra Personas LGBTI:** Sufren discriminación por su orientación sexual o identidad de género en educación, empleo y sanidad, y pueden enfrentar violencia[cite: 143].</li>
-                [cite_start]<li>**De Género:** Leyes, políticas y costumbres niegan derechos a mujeres y niñas (ej. restricción de vestimenta, trabajo nocturno, o solicitar préstamos)[cite: 145]. [cite_start]Globalmente, las mujeres tienen una brecha salarial del 23%[cite: 147].</li>
-                [cite_start]<li>**Por Razón de Casta:** Afecta a 260 millones de personas en Asia y África, resultando en exclusión social y violencia por el grupo social de nacimiento[cite: 148].</li>
-                [cite_start]<li>**Por Razón de Discapacidad:** 1 de cada 10 personas vive con una discapacidad, y el 82% de ellas vive por debajo del umbral de pobreza[cite: 149, 151].</li>
+                <li>**Étnica y Racial:** Niega sistemáticamente los derechos humanos por color, raza, etnia o ascendencia (como la casta)[cite: 139].</li>
+                <li>**Contra Personas Extranjeras (Xenofobia):** Se basa en ideas de superioridad y racismo, a menudo fomentadas por políticos, y ha llevado a violencia y políticas abusivas contra migrantes[cite: 141, 142].</li>
+                <li>**Contra Personas LGBTI:** Sufren discriminación por su orientación sexual o identidad de género en educación, empleo y sanidad, y pueden enfrentar violencia[cite: 143].</li>
+                <li>**De Género:** Leyes, políticas y costumbres niegan derechos a mujeres y niñas (ej. restricción de vestimenta, trabajo nocturno, o solicitar préstamos)[cite: 145]. [cite_start]Globalmente, las mujeres tienen una brecha salarial del 23%[cite: 147].</li>
+                <li>**Por Razón de Casta:** Afecta a 260 millones de personas en Asia y África, resultando en exclusión social y violencia por el grupo social de nacimiento[cite: 148].</li>
+                <li>**Por Razón de Discapacidad:** 1 de cada 10 personas vive con una discapacidad, y el 82% de ellas vive por debajo del umbral de pobreza[cite: 149, 151].</li>
             </ul>
         </section>
 
         <section class="info-section medidas-section">
             <h2>La Solución: Peticiones de Amnistía Internacional</h2>
-            [cite_start]<p>Amnistía Internacional exige a los gobiernos que[cite: 153]:</p>
+            <p>Amnistía Internacional exige a los gobiernos que[cite: 153]:</p>
             <ul>
-                [cite_start]<li>Acaben con las leyes discriminatorias y liberen a los encarcelados por su aplicación[cite: 154].</li>
-                [cite_start]<li>Protejan a todas las personas de la discriminación y la violencia[cite: 155].</li>
-                [cite_start]<li>Introduzcan leyes y políticas que promuevan la inclusión y la diversidad[cite: 156].</li>
-                [cite_start]<li>Tomen medidas para abordar las causas fundamentales de la discriminación, como cuestionar estereotipos[cite: 157].</li>
+                <li>Acaben con las leyes discriminatorias y liberen a los encarcelados por su aplicación[cite: 154].</li>
+                <li>Protejan a todas las personas de la discriminación y la violencia[cite: 155].</li>
+                <li>Introduzcan leyes y políticas que promuevan la inclusión y la diversidad[cite: 156].</li>
+                <li>Tomen medidas para abordar las causas fundamentales de la discriminación, como cuestionar estereotipos[cite: 157].</li>
             </ul>
         </section>
     </main>
