todo slos errores de texto estan solucionados

--- a/HTML/desigualdad.html
+++ b/HTML/desigualdad.html
@@ -13,7 +13,7 @@
     </header>
 
     <main class="content-main">
-        [cite_start]<p class="definicion">La desigualdad se puede medir en términos de renta o patrimonio y es una causa principal de la pobreza, la falta de oportunidades y la fractura social[cite: 2]. [cite_start]Si bien cierto grado de desigualdad es tolerable y puede incentivar la competencia, un aumento excesivo dificulta el progreso económico y social[cite: 3].</p>
+        <p class="definicion">La desigualdad se puede medir en términos de renta o patrimonio y es una causa principal de la pobreza, la falta de oportunidades y la fractura social. Si bien cierto grado de desigualdad es tolerable y puede incentivar la competencia, un aumento excesivo dificulta el progreso económico y social.</p>
 
         <section class="info-section">
             <h2>Impacto y Consecuencias</h2>
@@ -21,31 +21,31 @@
             <div class="impacto-box">
                 <h3>En las Personas</h3>
                 <ul>
-                    <li>Genera falta de oportunidades, exclusión de la educación, la vivienda y la salud[cite: 5].</li>
-                    <li>Reduce la movilidad social al limitar las oportunidades profesionales de los grupos más desfavorecidos[cite: 5].</li>
-                    <li>Puede resultar en delincuencia, enfermedades y degradación ambiental[cite: 5].</li>
+                    <li>Genera falta de oportunidades, exclusión de la educación, la vivienda y la salud.</li>
+                    <li>Reduce la movilidad social al limitar las oportunidades profesionales de los grupos más desfavorecidos.</li>
+                    <li>Puede resultar en delincuencia, enfermedades y degradación ambiental.</li>
                 </ul>
             </div>
 
             <div class="impacto-box">
                 <h3>En la Actividad Económica</h3>
                 <ul>
-                    <li>Dificulta el crecimiento económico y la estabilidad a nivel macroeconómico[cite: 5].</li>
-                    <li>Puede limitar el crecimiento potencial de la economía al reducir las inversiones en capital humano por parte de las personas de rentas más bajas[cite: 5].</li>
+                    <li>Dificulta el crecimiento económico y la estabilidad a nivel macroeconómico.</li>
+                    <li>Puede limitar el crecimiento potencial de la economía al reducir las inversiones en capital humano por parte de las personas de rentas más bajas.</li>
                 </ul>
             </div>
         </section>
 
         <section class="info-section medidas-section">
-            <h2>Medidas Tomadas y Sugeridas (ODS 10)</h2>
-            <p>Para reducir la desigualdad y lograr el Objetivo de Desarrollo Sostenible (ODS) 10, es necesario[cite: 7]:</p>
+            <h2>Medidas Tomadas y Sugeridas</h2>
+            <p>Para reducir la desigualdad y lograr el Objetivo de Desarrollo Sostenible (ODS) 10, es necesario:</p>
             <ul>
-                <li>Distribuir equitativamente los recursos[cite: 8].</li>
-                <li>Invertir en la enseñanza y desarrollo de capacidades[cite: 9].</li>
-                <li>Implementar políticas de protección social y garantizar la justicia fiscal[cite: 10].</li>
-                <li>Luchar contra la discriminación (racismo, xenofobia, prejuicios) y apoyar a los grupos marginados (como migrantes y refugiados)[cite: 11, 13].</li>
-                <li>Fortalecer la institucionalidad social e incorporar la noción de multiculturalidad e interculturalidad en las políticas públicas[cite: 14, 15].</li>
-                <li>Las empresas pueden contribuir: cumpliendo las leyes tributarias, promoviendo la diversidad, equidad e inclusión (DEI), y facilitando funciones en distintos idiomas y formatos accesibles[cite: 16].</li>
+                <li>Distribuir equitativamente los recursos.</li>
+                <li>Invertir en la enseñanza y desarrollo de capacidades.</li>
+                <li>Implementar políticas de protección social y garantizar la justicia fiscal.</li>
+                <li>Luchar contra la discriminación (racismo, xenofobia, prejuicios) y apoyar a los grupos marginados (como migrantes y refugiados).</li>
+                <li>Fortalecer la institucionalidad social e incorporar la noción de multiculturalidad e interculturalidad en las políticas públicas.</li>
+                <li>Las empresas pueden contribuir: cumpliendo las leyes tributarias, promoviendo la diversidad, equidad e inclusión (DEI), y facilitando funciones en distintos idiomas y formatos accesibles.</li>
             </ul>
         </section>
     </main>
