--- a/HTML/pobreza.html
+++ b/HTML/pobreza.html
@@ -13,7 +13,7 @@
     </header>
 
     <main class="content-main">
-        [cite_start]<p class="definicion">La pobreza extrema impide a las personas satisfacer sus **necesidades básicas** como alimentación, vivienda, educación y atención médica[cite: 119]. [cite_start]Es un factor negativo principal para la salud: es causa de enfermedad, y la propia enfermedad causa mayor pobreza[cite: 120].</p>
+        <p class="definicion">La pobreza extrema impide a las personas satisfacer sus **necesidades básicas** como alimentación, vivienda, educación y atención médica. Es un factor negativo principal para la salud: es causa de enfermedad, y la propia enfermedad causa mayor pobreza.</p>
 
         <section class="info-section">
             <h2>Impacto y Consecuencias</h2>
@@ -21,31 +21,31 @@
             <div class="impacto-box">
                 <h3>En las Personas</h3>
                 <ul>
-                    <li>Impide la satisfacción de necesidades básicas y obstaculiza la capacidad para salir de la pobreza[cite: 122].</li>
-                    <li>Conduce a un empobrecimiento que condiciona una biología inadecuada, estilos de vida insalubres y dificulta el acceso a los servicios sanitarios[cite: 122].</li>
+                    <li>Impide la satisfacción de necesidades básicas y obstaculiza la capacidad para salir de la pobreza.</li>
+                    <li>Conduce a un empobrecimiento que condiciona una biología inadecuada, estilos de vida insalubres y dificulta el acceso a los servicios sanitarios.</li>
                 </ul>
             </div>
 
             <div class="impacto-box">
                 <h3>En la Actividad Económica</h3>
                 <ul>
-                    <li>La pobreza y la desigualdad persistentes limitan el desarrollo sostenible[cite: 122].</li>
-                    <li>La inversión empresarial responsable se presenta como una poderosa herramienta para generar un impacto positivo y duradero[cite: 122].</li>
+                    <li>La pobreza y la desigualdad persistentes limitan el desarrollo sostenible.</li>
+                    <li>La inversión empresarial responsable se presenta como una poderosa herramienta para generar un impacto positivo y duradero.</li>
                 </ul>
             </div>
         </section>
 
         <section class="info-section medidas-section">
-            <h2>Medidas Tomadas y Sugeridas (ODS 1)</h2>
-            <p>Para poner fin a la pobreza, las soluciones se enfocan en la inversión y la protección social[cite: 124]:</p>
+            <h2>Medidas Tomadas y Sugeridas</h2>
+            <p>Para poner fin a la pobreza, las soluciones se enfocan en la inversión y la protección social:</p>
             <ul>
-                <li>Garantía de ingresos y protección social más amplia[cite: 125].</li>
-                <li>Acabar con el hambre y la malnutrición (incluyendo el apoyo a bancos de alimentos)[cite: 126].</li>
-                <li>Cobertura universal de la salud y acceso universal a la educación de calidad[cite: 127].</li>
-                <li>Aumentar la inversión en el desarrollo de regiones y comunidades empobrecidas[cite: 128].</li>
-                <li>Atajar la desigualdad de género y la violencia de género, promoviendo la igualdad de género como fundamental para abordar la pobreza[cite: 129].</li>
-                <li>Crear marcos normativos sólidos a nivel nacional e internacional, con estrategias de desarrollo que favorezcan a los pobres y tengan en cuenta las cuestiones de género[cite: 130].</li>
-                <li>Fomentar el voluntariado y las donaciones para apoyar proyectos a largo plazo que asienten bases educativas, económicas y sociales[cite: 131].</li>
+                <li>Garantía de ingresos y protección social más amplia.</li>
+                <li>Acabar con el hambre y la malnutrición (incluyendo el apoyo a bancos de alimentos).</li>
+                <li>Cobertura universal de la salud y acceso universal a la educación de calidad.</li>
+                <li>Aumentar la inversión en el desarrollo de regiones y comunidades empobrecidas.</li>
+                <li>Atajar la desigualdad de género y la violencia de género, promoviendo la igualdad de género como fundamental para abordar la pobreza.</li>
+                <li>Crear marcos normativos sólidos a nivel nacional e internacional, con estrategias de desarrollo que favorezcan a los pobres y tengan en cuenta las cuestiones de género.</li>
+                <li>Fomentar el voluntariado y las donaciones para apoyar proyectos a largo plazo que asienten bases educativas, económicas y sociales.</li>
             </ul>
         </section>
     </main>
