--- a/HTML/discriminacion.html
+++ b/HTML/discriminacion.html
@@ -3,44 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3. Discriminación</title>
+    <title>3. Discriminación - Antigitanismo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
+
     <header class="content-header">
-        <a href="home.html" class="back-link">← Volver a Home</a>
-        <h1>3. Discriminación</h1>
+        <div class="content-main" style="margin: 0; padding: 0;">
+            <a href="home.html" class="back-link">← Volver a Home</a>
+            <h1>3. Discriminación: Antigitanismo y Racismo Estructural</h1>
+        </div>
     </header>
 
     <main class="content-main">
-        <p class="definicion">La discriminación es un daño que ataca los derechos de una persona por ser quien es o por sus creencias, perpetuando la desigualdad. El derecho a ser tratado por igual, sin importar la raza, el género, la orientación sexual, la religión u otra condición, se ve frustrado frecuentemente.</p>
+        
+        <p class="definicion">
+            La discriminación no es solo un acto aislado, es una barrera estructural. Basándonos en la noticia de RTVE sobre el <strong>antigitanismo</strong>, analizamos cómo los prejuicios y el llamado "microrracismo" afectan gravemente a la comunidad gitana en su día a día.
+        </p>
 
         <section class="info-section">
-            <h2>Principales Formas de Discriminación</h2>
-            <ul>
-                <li>Étnica y Racial: Niega sistemáticamente los derechos humanos por color, raza, etnia o ascendencia (como la casta).</li>
-                <li>Contra Personas Extranjeras (Xenofobia): Se basa en ideas de superioridad y racismo, a menudo fomentadas por políticos, y ha llevado a violencia y políticas abusivas contra migrantes.</li>
-                <li>Contra Personas LGBTI: Sufren discriminación por su orientación sexual o identidad de género en educación, empleo y sanidad, y pueden enfrentar violencia.</li>
-                <li>De Género: Leyes, políticas y costumbres niegan derechos a mujeres y niñas (ej. restricción de vestimenta, trabajo nocturno, o solicitar préstamos).Globalmente, las mujeres tienen una brecha salarial del 23%.</li>
-                <li>Por Razón de Casta: Afecta a 260 millones de personas en Asia y África, resultando en exclusión social y violencia por el grupo social de nacimiento.</li>
-                <li>Por Razón de Discapacidad: 1 de cada 10 personas vive con una discapacidad, y el 82% de ellas vive por debajo del umbral de pobreza.</li>
-            </ul>
+            <h2>Análisis de Impactos</h2>
+
+            <div class="impacto-box">
+                <h3>¿Cuál ha sido su impacto sobre las personas?</h3>
+                <p>El impacto personal es psicológico y material, creando una ciudadanía de segunda clase:</p>
+                <ul>
+                    <li><strong>Presunción de culpabilidad:</strong> Vigilancia constante por guardias de seguridad en supermercados y tiendas, generando estrés y humillación pública.</li>
+                    <li><strong>Barrera en la vivienda:</strong> Rechazo sistemático al intentar alquilar un piso en cuanto el arrendador detecta el origen étnico o los apellidos.</li>
+                    <li><strong>Ocultación de identidad:</strong> Necesidad de esconder su etnia o "blanquearse" para ser aceptados social o laboralmente (autocensura).</li>
+                    <li><strong>Salud Mental:</strong> El "goteo constante" de discriminación genera ansiedad, baja autoestima y sensación de no pertenencia.</li>
+                </ul>
+            </div>
+
+            <div class="impacto-box">
+                <h3>¿Cuál ha sido su impacto sobre las empresas?</h3>
+                <p>El racismo estructural empobrece el tejido empresarial y organizacional:</p>
+                <ul>
+                    <li><strong>Pérdida de Talento:</strong> Al descartar currículums por apellidos o código postal (barrios segregados), las empresas pierden trabajadores competentes y motivados.</li>
+                    <li><strong>Homogeneidad:</strong> La falta de diversidad cultural reduce la capacidad de innovación y de entender a una base de clientes diversa.</li>
+                    <li><strong>Reputación Negativa:</strong> Las prácticas discriminatorias (como la vigilancia selectiva en comercios) dañan la imagen de marca y alienan a consumidores.</li>
+                </ul>
+            </div>
+
+            <div class="impacto-box">
+                <h3>¿Cuál ha sido su impacto sobre la actividad económica?</h3>
+                <p>La exclusión de un colectivo tiene costes macroeconómicos claros:</p>
+                <ul>
+                    <li><strong>Perpetuación de la Pobreza:</strong> El bloqueo en el acceso a empleos de calidad impide la movilidad social, enquistando bolsas de pobreza que requieren asistencia estatal.</li>
+                    <li><strong>Economía Sumergida:</strong> Si el mercado laboral formal cierra las puertas por prejuicios, empuja a las personas hacia la informalidad y la precariedad.</li>
+                    <li><strong>Desaprovechamiento de Capital Humano:</strong> Se desperdicia el potencial productivo y creativo de miles de personas debido a estigmas arcaicos.</li>
+                </ul>
+            </div>
+
+            <div class="impacto-box">
+                <h3>¿Qué medidas y/o acciones se han tomado para minimizar los impactos?</h3>
+                <p>Aunque existen leyes, la realidad cotidiana muestra que son insuficientes:</p>
+                <ul>
+                    <li><strong>Legislación:</strong> Existen leyes contra los delitos de odio y la discriminación, pero a menudo son difíciles de aplicar en casos de "racismo sutil" o en el acceso a vivienda privada.</li>
+                    <li><strong>Denuncia Social:</strong> Organizaciones y activistas visibilizan estos problemas, acuñando términos como "antigitanismo" para darle entidad política al problema.</li>
+                </ul>
+            </div>
+
         </section>
 
         <section class="info-section medidas-section">
-            <h2>La Solución: Peticiones de Amnistía Internacional</h2>
-            <p>Amnistía Internacional exige a los gobiernos que:</p>
+            <h2>¿Qué medidas creéis que se deberían tomar?</h2>
+            <p>
+                Para erradicar el racismo estructural y cotidiano, es necesario ir más allá de las buenas intenciones:
+            </p>
             <ul>
-                <li>Acaben con las leyes discriminatorias y liberen a los encarcelados por su aplicación.</li>
-                <li>Protejan a todas las personas de la discriminación y la violencia.</li>
-                <li>Introduzcan leyes y políticas que promuevan la inclusión y la diversidad.</li>
-                <li>Tomen medidas para abordar las causas fundamentales de la discriminación, como cuestionar estereotipos.</li>
+                <li><strong>Currículums Ciegos:</strong> Implementar procesos de selección donde no aparezcan nombre ni foto para evitar sesgos inconscientes.</li>
+                <li><strong>Sanciones en Vivienda:</strong> Endurecer las multas y controles a inmobiliarias y propietarios que discriminen por origen étnico.</li>
+                <li><strong>Educación Antirracista:</strong> Incluir la historia y cultura del pueblo gitano en el currículo escolar para romper estereotipos desde la infancia.</li>
+                <li><strong>Protocolos en Comercios:</strong> Prohibir y sancionar las prácticas de perfilado racial por parte de la seguridad privada.</li>
             </ul>
         </section>
+        
+        <hr style="border: 0; margin: 20px 0;">
+
+        <section class="info-section reflexion-section">
+            <h2>Reflexión Personal</h2>
+            <p>
+                El término "microrracismo" es peligroso porque, como señala la noticia, minimiza el dolor. No es "micro" que te sigan por una tienda como si fueras un ladrón o que no te alquilen una casa. Eso es violencia estructural. Como sociedad, a menudo miramos hacia otro lado o pensamos que el racismo es cosa del pasado o de otros países, pero lo ejercemos o toleramos a diario contra nuestros propios vecinos. La verdadera integración no es que ellos "cambien", sino que nosotros dejemos de juzgarles por prejuicios heredados.
+            </p>
+        </section>
+
     </main>
 
     <footer>
-        <p>Fuente: reptes socials _ info.pdf (Discriminación)</p>
+        <p>
+            <strong>Fuentes de la Información:</strong>
+            <br><br>
+            - Datos basados en el análisis sobre discriminación y antigitanismo.
+            <br>
+            - Noticia de referencia: <a href="https://www.rtve.es/noticias/20251016/antigitanismo-cotidiano-microrracismo-gitanos-racismo-estructural/16697027.shtml?" target="_blank" style="color: white; text-decoration: underline;">Antigitanismo cotidiano: del "microrracismo" al racismo estructural</a>
+        </p>
     </footer>
 </body>
 </html>
